Fixed spacing of topic from top

--- a/common/common.scss
+++ b/common/common.scss
@@ -32,7 +32,7 @@ div[class^="category-title-header"] {
 
 
 .above-topic-image-wrapper {
-  height: 100px;
+  height: 25px;
 
   .above-topic-image {
     position: absolute;
